--- a/public/style.css
+++ b/public/style.css
@@ -8,7 +8,7 @@
     src: url(Itim/Itim-Regular.ttf);
   }
   nav {
-    transition: opacity 2s ease-in-out;
+    transition: opacity 2s , display 2s;
   }
   /*leo Log-in*/
 
@@ -572,12 +572,12 @@
     margin-left: 15%;
   }
   #boxscore {
-    width: 560px;
+    width: 60%;
     height: 100px;
     border-radius: 30px;
     background: #ffffff;
     border: 1px solid #000;
-    margin-left: 22%;
+    margin-left: 20%;
   }
   
   #congreat {
